--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "dependencies": {
-    "express": "^4.18.2"
-  },
   "name": "apipractice",
   "description": "",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +17,12 @@
   "bugs": {
     "url": "https://github.com/EmmyEJohnson/apiPractice/issues"
   },
-  "homepage": "https://github.com/EmmyEJohnson/apiPractice#readme"
+  "homepage": "https://github.com/EmmyEJohnson/apiPractice#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
